--- a/ggplot-series.qmd
+++ b/ggplot-series.qmd
@@ -8,6 +8,7 @@ listing:
   sort-ui: false
   filter-ui: false
   fields: [date, title, reading-time, description]
+  feed: true
 page-layout: full
 title-block-banner: true
 ---
