--- a/blog.qmd
+++ b/blog.qmd
@@ -25,7 +25,7 @@ that you can use to level up your ggplot game.
 
 ::: {.column width="60%"}
 # Subscribe
-<iframe id="beehiiv-form" src="https://embeds.beehiiv.com/9232d2a2-6e85-4beb-b8ed-1de94e9e4f01?slim=true" data-test-id="beehiiv-embed" frameborder="0" scrolling="no" style="margin: 0; border-radius: 0px !important; background-color: transparent; height: 75px; width: 90%;"></iframe>
+<iframe src="https://embeds.beehiiv.com/6ea85d8c-8a94-42b4-afa0-9fbf75b5ccb0?slim=true" data-test-id="beehiiv-embed" height="45" frameborder="0" scrolling="no" style="margin: 0; border-radius: 0px !important; background-color: transparent; height: 75px; width: 90%;"></iframe>
 :::
 
 :::: 
